scrollbar issue is fixed

--- a/src/components/overwriteEditor.css
+++ b/src/components/overwriteEditor.css
@@ -40,8 +40,8 @@
 
 .sun-editor .se-wrapper-inner {
   min-height: 408px !important;
-  overflow-y: none !important;
-  overflow-x: none !important;
+  overflow-y: hidden !important;
+  overflow-x: hidden !important;
   height: 100%;
 }
 .sun-editor .se-container {
